--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 .head {
@@ -43,7 +44,7 @@
   height: 30px;
   border: 0;
   border-radius: 20px;
-  padding-left: 10px;
+  padding-left: 20px;
 
 }
 .add-button {
